--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title></title>
   </head>
   <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Trybe - Lessons Learned</h1>
+    </header>
   </body>
 </html>
