--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
+    <img src="minhafoto.jpeg" id="minha_foto" width="300px">
   </body>
 </html>
