--- a/index.html
+++ b/index.html
@@ -10,5 +10,30 @@
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
     <img src="minhafoto.jpeg" id="minha_foto" width="300px">
+    <h2>Lições:</h2>
+    <ol>
+        <li>Unix</li>
+        <li>Slack</li>
+        <li>Autoliderança</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Assertividade</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+        <li>Feedbacks</li>
+    </ol>
+    <ul>
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>CSS Flexbox</li>
+        <li>React</li>
+        <li>RTL</li>
+        <li>Redux</li>
+        <li>SQL</li>
+        <li>Node.js</li>
+        <li>MongoDB</li>
+        <li>Python</li>
+    </ul>
   </body>
 </html>
