adicionei alt e ids faltantes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <header id="cabecalho">
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
-    <img src="minhafoto.jpeg" id="minha_foto" width="300px">
+    <img src="minhafoto.jpeg" id="minha_foto" width="300px" alt="Matheus Milanez">
     <h2>Lições:</h2>
-    <ol>
+    <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Slack</li>
         <li>Autoliderança</li>
@@ -23,7 +23,7 @@
         <li>HTML Semântico</li>
         <li>Feedbacks</li>
     </ol>
-    <ul>
+    <ul id="licoes_a_aprender">
         <li>Javascript</li>
         <li>DOM</li>
         <li>CSS Flexbox</li>
