--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <header id="cabecalho">
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
-    <img src="minhafoto.jpeg" id="minha_foto" width="300px" alt="Matheus Milanez">
+    <img src="minhafoto.jpeg" id="minha_foto" width="300px" alt="Matheus Milanez"><br>
+    <a href="https://github.com/matheusmilanez96" target="_blank">Meu Github</a>
     <h2>Lições:</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
