--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li>MongoDB</li>
         <li>Python</li>
     </ul>
+    <article>Nessas duas semanas de Trybe, consegui aprender sobre comandos no Terminal com as aulas de Unix e Bash na primeira seção do curso, versionamento de códigos com o Git e Github na segunda seção e sobre o processo de criar páginas web nas aulas de HTML e CSS na terceira seção. Além disso, tivemos momentos soft skills para falar sobre autoliderança, assertividade e como dar e receber feedbacks.</article>
     <footer id="rodape"></footer>
   </body>
 </html>
