--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
     <img src="minhafoto.jpeg" id="minha_foto" width="300px" alt="Matheus Milanez"><br>
-    <a href="https://github.com/matheusmilanez96" target="_blank">Meu Github</a>
+    <a href="https://github.com/matheusmilanez96" target="_blank">Meu Github<span class="visuallyhidden">, abre em nova janela</span></a>
     <h2>Lições:</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
