--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Nessas duas semanas de Trybe, consegui aprender sobre comandos no Terminal com as aulas de Unix e Bash na primeira seção do curso, versionamento de códigos com o Git e Github na segunda seção e sobre o processo de criar páginas web nas aulas de HTML e CSS na terceira seção. Além disso, tivemos momentos soft skills para falar sobre autoliderança, assertividade e como dar e receber feedbacks.
     </article><br>
     <aside>
-        Sou Brasileiro natural de Campinas-SP, mas moro em Vinhedo-SP há 21 anos. Estudei estatística na Unicamp (não concluído) e sou proficiente em 4 línguas: Português, Inglês, Espanhol e Coreano.
+        Sou Brasileiro natural de Campinas-SP, mas moro em Vinhedo-SP há 21 anos. Estudei estatística na Unicamp e sou proficiente em 4 línguas: Português, Inglês, Espanhol e Coreano.
     </aside><br>
     <footer id="rodape">
         Todos os direitos reservados, Matheus
