--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Trybe - Lessons Learned</h1>
     </header>
+    <br><br><br>
     <img src="minhafoto.jpeg" id="minha_foto" width="300px" alt="Matheus Milanez"><br>
     <a href="https://github.com/matheusmilanez96" target="_blank">Meu Github<span class="visuallyhidden">, abre em nova janela</span></a>
     <h2>Lições:</h2>
@@ -42,6 +43,40 @@
     <aside>
         Sou Brasileiro natural de Campinas-SP, mas moro em Vinhedo-SP há 21 anos. Estudei estatística na Unicamp e sou proficiente em 4 línguas: Português, Inglês, Espanhol e Coreano.
     </aside><br>
+    <h3>Top 4 do Brasileiro 2007:</h3>
+    <table>
+        <tr>
+            <th>Time</th>
+            <th>Pontos</th>
+            <th>Vitórias</th>
+            <th>Saldo de Gols</th>
+        </tr>
+        <tr>
+            <td>São Paulo</td>
+            <td>77</td>
+            <td>23</td>
+            <td>+36</td>
+        </tr>
+        <tr>
+            <td>Santos</td>
+            <td>62</td>
+            <td>19</td>
+            <td>+10</td>
+        </tr>
+        <tr>
+            <td>Flamengo</td>
+            <td>61</td>
+            <td>17</td>
+            <td>+6</td>
+        </tr>
+        <tr>
+            <td>Fluminense</td>
+            <td>61</td>
+            <td>16</td>
+            <td>+18</td>
+        </tr>
+    </table>
+    <br>
     <footer id="rodape">
         Todos os direitos reservados, Matheus
     </footer>
